--- a/docplan.css
+++ b/docplan.css
@@ -177,3 +177,121 @@ section .content p {
   font-weight: 400;
   font-family: Roboto, Arial, sans-serif;
 }
+.office {
+  max-width: 460px;
+  margin: 0 auto;
+  text-align: center;
+}
+.office h1 {
+  margin-top: 100px;
+  font-size: 2.1428571429em;
+  font-family: Arial, sans-serif;
+  color: #00b39b;
+  font-weight: 300;
+  letter-spacing: -0.3px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  display: block;
+}
+.office p {
+  line-height: 1.7142857143;
+  margin: 1.6em 0;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: 400;
+  font-family: Roboto, Arial, sans-serif;
+  color: #747474;
+  padding-top: 70px;
+  -webkit-font-smoothing: antialiased;
+}
+.but {
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #988585;
+  font-size: larger;
+}
+.button {
+  margin: auto;
+  margin-bottom: 20px;
+  float: right;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  outline: 0;
+  border: 0;
+  border-radius: 4px;
+  padding: 1.1666666667em 1.5em;
+  background: #3d83df;
+  font-family: Roboto, Arial, sans-serif;
+  line-height: 1em;
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  font-size: 0.75rem;
+  text-align: center;
+
+  text-transform: uppercase;
+}
+.espace {
+  margin-top: 50px;
+  justify-content: space-between;
+}
+.sliderfotos {
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 200px 50px;
+
+  margin-top: 100px;
+  display: flex;
+  width: 80%;
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+.foto1,
+img {
+  border-radius: 10px;
+}
+footer {
+  padding: 80px;
+  font-size: 0.875em;
+  text-align: center;
+}
+.tofooter h1 {
+  font-size: 2.1428571429em;
+  color: #333;
+  margin-bottom: 0.75em;
+  font-family: Work Sans, Arial, sans-serif;
+  font-weight: 300;
+  letter-spacing: -0.3px;
+}
+button {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  outline: 0;
+  border: 0;
+  border-radius: 4px;
+  padding: 1.1666666667em 1.5em;
+  background: #3d83df;
+  font-family: Roboto, Arial, sans-serif;
+  line-height: 1em;
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  font-size: 0.75rem;
+  text-align: center;
+  text-decoration: none !important;
+  text-transform: uppercase;
+  transition: all 0.2s ease 0s;
+  margin-bottom: 10em;
+}
+footer p {
+  margin-bottom: 0.4em;
+  font-size: 12px;
+  color: #ababab;
+  margin: 1.6vmin 0;
+}
